Bug 458364 - Wallpaper set by "Set as Wallpaper" is not shown in the config dialog
Summary: Wallpaper set by "Set as Wallpaper" is not shown in the config dialog
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-08-27 02:37 UTC by Fushan Wen
Modified: 2022-08-27 02:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-08-27 02:37:46 UTC
SUMMARY
If a wallpaper is added by "Set as Wallpaper", the wallpaper will not be shown in the config dialog


STEPS TO REPRODUCE
1. Choose an image in Dolphin, and right click - Set as Wallpaper
2. Open desktop wallpaper config dialog
3. Find the wallpaper

OBSERVED RESULT
No new wallpaper

EXPECTED RESULT
New wallpaper

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-08-27 02:38:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2049
Comment 2 Fushan Wen 2022-08-27 02:48:32 UTC
Git commit 51107d9ab45dfe05297354bcb44c8aeea897f27e by Fushan Wen.
Committed on 27/08/2022 at 02:41.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: add current image to list if it's not in list

The current wallpaper image can be set by a Plasma script. In that case,
the wallpaper is not added to the list, so also check the current image
is already added after opening the config dialog.
FIXED-IN: 5.26

M  +6    -2    wallpapers/image/imagepackage/contents/ui/ThumbnailsComponent.qml
M  +1    -1    wallpapers/image/plugin/imagebackend.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/51107d9ab45dfe05297354bcb44c8aeea897f27e