wallpapers/image: add current image to list if it's not in list

The current wallpaper image can be set by a Plasma script. In that case,
the wallpaper is not added to the list, so also check the current image
is already added after opening the config dialog.

BUG: 458364
FIXED-IN: 5.26